fix Mac installer crash. bug 105437. r/sr=sfraser